# stateless-discord-bot

./: .gitignore  Cargo.toml  README.md  goorm.manifest  package.json  tsconfig.json  wrangler.toml
commands/: _lib.ts  debug.ts  goodbye.ts  hello.ts
lib/: api.ts  framework.ts
scripts/: commands.ts
src/: lib.rs
