[package]
name = "stateless-discord-bot"
description = "the name"
repository = "https://github.com/meizuflux/stateless-discord-bot"
license = "MPL-2.0"
version = "0.1.0"
authors = ["meizuflux"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
worker = "0.0.8"
serde_json = "1.0.67"
twilight-model = "0.8.5"
hex = "0.4"
ed25519-dalek = "1"
wee_alloc = "0.4.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
